pkl-core/src/test/files/LanguageSnippetTests/input/errors/reference15.pkl
import "pkl:ref"

class D extends ref.Domain {
  function renderReference(reference: ref.Reference<D, Any>): String = throw("not supported")
}
local d: D = new {}

test = ref.Reference(d, Dynamic, "").default
